app/src/main/java/com/example/composechatsample/core/errors/SocketErrorMessage.kt
package com.example.composechatsample.core.errors

data class SocketErrorMessage(val error: ErrorResponse? = null)